# Trust_Web

./: .gitignore  Game_Logic.md  README.md  hello.py  pyproject.toml  requirements.txt  rxconfig.py  state.py  test.ipynb  transaction_schema.txt  trust_game_experiment.py
.cursor/rules/: reflex-dev.mdc
Trust_Web/: Trust_Web.py  authentication.py  demographic_state.py  firebase_config.py  firebase_db.py  instruction_state.py  layout.py  manage_llm.py  play_trust.py  public_goods_state.py  questionnaire_state.py  results_state.py  setup_firebase.py  state.py  trust_game_state.py
Trust_Web/components/: __init__.py  common_styles.py  demography.py  final_page.py  instructions.py  landing_page.py  login_form.py  public_goods.py  questionnaire.py  results.py  section_1.py  section_2.py  section_transition.py  stage_transition.py  ui_helpers.py
Trust_Web/profiles/: game_rules.toml  personalities.toml  questionnaires.toml
assets/img/: hero.pxd
